1. policy updated 2. removed side bar tags 3. dashboard updated 4. tables updated 	modified:   README.md 	modified:   src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.html 	modified:   src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.ts 	modified:   src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.html 	modified:   src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.ts 	modified:   src/app/pages/apps/apps.module.ts 	modified:   src/app/pages/apps/apps.routing.ts 	modified:   src/app/pages/apps/client-administraion/client-administraion.component.html 	modified:   src/app/pages/apps/client-administraion/client-administraion.component.ts 	modified:   src/app/pages/apps/client-administraion/deleted-client-list/deleted-client-list.component.html 	modified:   src/app/pages/apps/client-administraion/deleted-client/delete-client-form/delete-client-form.component.html 	modified:   src/app/pages/apps/client-administraion/deleted-client/deleted-client.component.html 	modified:   src/app/pages/apps/client-administraion/deleted-client/deleted-client.component.ts 	modified:   src/app/pages/apps/generateotp/generateotp.component.html 	modified:   src/app/pages/apps/generateotp/generateotp.component.ts 	new file:   src/app/pages/apps/groups/note.ts 	new file:   src/app/pages/apps/groups/notes-data.ts 	modified:   src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.html 	modified:   src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.scss 	modified:   src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.ts 	modified:   src/app/pages/apps/listregclient/client-info/client-info.component.html 	modified:   src/app/pages/apps/listregclient/listregclient.component.html 	modified:   src/app/pages/apps/listregclient/listregclient.component.ts modified:   src/app/pages/apps/localadmin/localadmin.component.html 	modified:   src/app/pages/apps/manag

--- a/src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.html
+++ b/src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.html
@@ -3,28 +3,32 @@
 
     <div *ngIf="showTable">
 
-        <table datatable [dtOptions]="dtOptions" class="row-border hover">
-            <thead>
-                <tr>
-                    <th>Sr No</th>
-                    <th>Policy Version</th>
-                    <th>Updated On</th>
+        <div class="colorTable">
 
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of allServerPolicy; let i = index">
-                    <td>{{ i + 1 }}</td>
-
-                    <td>{{ item.policy_version }}</td>
-
-                    <td>
-                        {{ item.created_on !== 'N/A' ? (item.created_on | date:'dd-MM-yyyy HH:mm:ss') : 'N/A' }}
-                    </td>
-
-                </tr>
-            </tbody>
-        </table>
+            
+            <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                <thead>
+                    <tr>
+                        <th>Sr No</th>
+                        <th>Policy Version</th>
+                        <th>Updated On</th>
+    
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of allServerPolicy; let i = index">
+                        <td>{{ i + 1 }}</td>
+    
+                        <td>{{ item.policy_version }}</td>
+    
+                        <td>
+                            {{ item.created_on !== 'N/A' ? (item.created_on | date:'dd-MM-yyyy HH:mm:ss') : 'N/A' }}
+                        </td>
+    
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <button mat-flat-button color="primary" mat-dialog-close cdkFocusInitial style="margin: auto;
     display: flex;margin-top: 1rem;">
