--- a/src/app/pages/authentication/boxed-login/boxed-login.component.html
+++ b/src/app/pages/authentication/boxed-login/boxed-login.component.html
@@ -14,7 +14,7 @@
          -->
         
          <h2 style="display: flex; justify-content: center; margin-top: 25px; margin-bottom: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100%;">
-          <span style="font-size: 30px;margin-bottom: 15px;">Internet Security Operation Center</span>
+          <span style="font-size: 30px;margin-bottom: 15px;">Internet Security Operation Centre</span>
         </h2>
         
 
