--- a/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.html
@@ -97,6 +97,53 @@
         </mat-card-content> -->
       </mat-card>
     </div>
+
+    <!-- <div class="col-sm-4 col-lg-4" >
+        <mat-card class="cardWithShadow ">
+          <mat-card-content class="p-24 ">
+            <mat-card-title>OTP status</mat-card-title>
+          
+           
+                <div id="visitor-chart" class="p-t-30 d-flex flex-column">
+                  <apx-chart [series]="chartOptions2.series" [chart]="chartOptions2.chart"
+                    [dataLabels]="chartOptions2.dataLabels" [colors]="chartOptions2.colors"
+                    [plotOptions]="chartOptions2.plotOptions" [labels]="chartOptions2.labels" style="height:200px"></apx-chart>
+    
+                    <mat-card class="b-1 shadow-none">
+                    
+                      <mat-card-content class="b-t-1" >
+                          <div class="row" style=" border-bottom: 1px solid #a3a3a3; padding-bottom: 16px;">
+                              <div class="col-sm-7 col-lg-7">
+                                 OTP Generated
+                              </div>
+                              <div class="col-sm-1 col-lg-1" style="display: flex;justify-content: center;">
+                                  :
+                              </div>
+                              <div class="col-sm-3 col-lg-3">
+                                {{otpStatus?.otp_generated}}
+                              </div>
+                          </div>
+              
+                          <div class="row" style="margin-top: 16px;">
+                              <div class="col-sm-7 col-lg-7">
+                                  OTP used
+                              </div>
+                              <div class="col-sm-1 col-lg-1" style="display: flex;justify-content: center;">
+                                  :
+                              </div>
+                              <div class="col-sm-4 col-lg-4">
+                                {{otpStatus?.otp_used}}
+                              </div>
+                          </div>
+                      </mat-card-content>
+                  </mat-card>
+                </div>
+            
+          </mat-card-content>
+         
+        </mat-card>
+        
+      </div> -->
   
   
   
