--- a/src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.html
+++ b/src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.html
@@ -3,27 +3,30 @@
 
     <div *ngIf="showTable">
 
-        <table datatable [dtOptions]="dtOptions" class="row-border hover">
-            <thead>
-                <tr>
-                    <th>Sr No</th>
-                    <th>Patch Version</th>
-                    <th>Updated On</th>
+        <div class="colorTable">
 
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of allServerPatch; let i = index">
-                    <td>{{ i + 1 }}</td>
-
-                    <td>{{ item.patchid }}</td>
-
-                    <td>
-                        {{ item.updated_on !== 'N/A' ? (item.updated_on | date:'dd-MM-yyyy HH:mm:ss') : 'N/A' }}
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+            <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                <thead>
+                    <tr>
+                        <th>Sr No</th>
+                        <th>Patch Version</th>
+                        <th>Updated On</th>
+    
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of allServerPatch; let i = index">
+                        <td>{{ i + 1 }}</td>
+    
+                        <td>{{ item.patchid }}</td>
+    
+                        <td>
+                            {{ item.updated_on !== 'N/A' ? (item.updated_on | date:'dd-MM-yyyy HH:mm:ss') : 'N/A' }}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <button mat-flat-button color="primary" mat-dialog-close cdkFocusInitial style="margin: auto;
     display: flex;margin-top: 1rem;">
