--- a/src/app/pages/apps/client-administraion/deleted-client/deleted-client.component.html
+++ b/src/app/pages/apps/client-administraion/deleted-client/deleted-client.component.html
@@ -3,49 +3,48 @@
     <mat-card-content class="p-24 bg-white">
   
       <div *ngIf="showTable">
+        <div class="colorTable">
       
-        <table datatable [dtOptions]="dtOptions" class="row-border hover">
-          <thead>
-            <tr>
-              <th>Sr No</th>
-              <th>ID</th>
-              <th>Client Name</th>
-              <th>Mac ID</th>
-              <th>Unit</th>
-              <th>IP</th>
-              <th>Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of listOfRegClient; let i = index">
-              <td>{{ i + 1 }}</td>
-              <td>
-                <div style="display:flex">
-      
-                  <span>
-        
+            <table datatable [dtOptions]="dtOptions" class="row-border hover">
+              <thead>
+                <tr>
+                  <th>Sr No</th>
+                  <th>Client D</th>
+                  <th>Client Name</th>
+                  <th>Mac ID</th>
+                  <th>Unit Name</th>
+                  <th>Client IP</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of listOfRegClient; let i = index">
+                  <td>{{ i + 1 }}</td>
+                  <td>
                     {{ item.client_id }}
-                  </span>
-                  <!-- <i-tabler name="info-circle-filled" class="icon-20 d-flex" style="margin-left: 0.2rem; color:#26c6da; cursor: pointer;margin: auto 0;" (click)="rowInfo(item)"></i-tabler> -->
-                </div>
-      
-              </td>
-              <td>{{ item.client_name }}</td>
-              <td>{{ item.client_macid }}</td>
-              <td>{{ item.client_unit }}</td>
-              <td>{{ item.client_publicip }}</td>
-              <td>
-                <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white m-x-8"
-                            style="border: none; cursor: pointer; display:flex; align-items: center;"
-                            (click)="deleteRow(item)">
-                       <i-tabler name="trash-filled" class="icon-20 d-flex m-x-2"></i-tabler> Delete
-                    </button>
-            </td>
-      
-             
-            </tr>
-          </tbody>
-        </table>
+                  </td>
+                  <td>{{ item.client_name }}</td>
+                  <td>{{ item.client_macid }}</td>
+                  <td>{{ item.unit_name }}</td>
+                  <td>{{ item.client_publicip }}</td>
+                  <td>
+                    <div style="display:flex; justify-content:center;">
+
+                        <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white m-x-8"
+                                    style="border: none; cursor: pointer; display:flex; align-items: center;"
+                                    (click)="deleteRow(item)">
+                               <i-tabler name="trash-filled" class="icon-20 d-flex m-x-2"></i-tabler> Delete
+                            </button>
+                    </div>
+                </td>
+          
+                 
+                </tr>
+              </tbody>
+            </table>
+        </div>
+        
+
       </div>
     </mat-card-content>
   </mat-card>
