--- a/src/app/pages/apps/listregclient/client-info/client-info.component.html
+++ b/src/app/pages/apps/listregclient/client-info/client-info.component.html
@@ -72,7 +72,7 @@
 
             <div class="row" style=" border-bottom: 1px solid #a3a3a3;">
                 <div class="col-sm-5 col-lg-5">
-                    Log Date
+                    Log Updated On
                 </div>
                 <div class="col-sm-1 col-lg-1" style="display: flex;justify-content: center;">
                     :
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="row" style=" border-bottom: 1px solid #a3a3a3;">
+            <!-- <div class="row" style=" border-bottom: 1px solid #a3a3a3;">
                 <div class="col-sm-5 col-lg-5">
                     Server Log
                 </div>
@@ -91,11 +91,10 @@
                     :
                 </div>
                 <div class="col-sm-6 col-lg-6">
-                    <!-- {{clientInfo?.es_log_date}} -->
                     {{ clientInfo?.es_log_date !== 'N/A' ? (clientInfo?.es_log_date | date:'dd-MM-yyyy HH:mm:ss') :
                     'N/A' }}
                 </div>
-            </div>
+            </div> -->
 
             <div class="row" style=" border-bottom: 1px solid #a3a3a3;">
                 <div class="col-sm-5 col-lg-5">
