--- a/src/app/pages/apps/listregclient/listregclient.component.html
+++ b/src/app/pages/apps/listregclient/listregclient.component.html
@@ -3,18 +3,19 @@
   <mat-card-content class="p-24 bg-white">
 
     <div *ngIf="showTable">
-    
+    <div class="colorTable">
+
       <table datatable [dtOptions]="dtOptions" class="row-border hover">
         <thead>
           <tr>
             <th>Sr No</th>
-            <th>ID</th>
+            <th>Client ID</th>
             <th>Client Name</th>
             <th>Mac ID</th>
-            <th>Unit</th>
-            <th>IP</th>
-            <th>Last Communication Time</th>
-            <th>Client Registration Date</th>
+            <th>Unit Name</th>
+            <th>Client IP</th>
+            <th>Last Communicated</th>
+            <th>Registered On</th>
           </tr>
         </thead>
         <tbody>
@@ -33,7 +34,7 @@
             </td>
             <td>{{ item.client_name }}</td>
             <td>{{ item.client_macid }}</td>
-            <td>{{ item.client_unit }}</td>
+            <td>{{ item.unit_name }}</td>
             <td>{{ item.client_publicip }}</td>
     
             <td>
@@ -45,6 +46,8 @@
           </tr>
         </tbody>
       </table>
+    </div>
+
     </div>
   </mat-card-content>
 </mat-card>
