--- a/src/app/pages/dashboards/dashboard1/log-pop-up/log-pop-up.component.html
+++ b/src/app/pages/dashboards/dashboard1/log-pop-up/log-pop-up.component.html
@@ -4,33 +4,36 @@
 
     <!-- <div *ngIf="showTable"> -->
 
-        <table datatable [dtOptions]="dtOptions" class="row-border hover">
-            <thead>
-                <tr>
-                    <th>Sr No</th>
-                    <th>Name</th>
+        <div class="colorTable">
 
-                    <th>Mac ID</th>
-                    <th>Public IP</th>
-
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let log of logData; let i = index">
-                    <td>{{ i + 1 }}</td>
-                    <td>
-                        {{log.client_id__client_name}}
-                    </td>
-
-                    <td>
-                        {{log.client_id__client_macid}}
-                    </td>
-                    <td>
-                        {{log.client_id__client_publicip}}
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+            <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                <thead>
+                    <tr>
+                        <th>Sr No</th>
+                        <th>Name</th>
+    
+                        <th>Mac ID</th>
+                        <th>Public IP</th>
+    
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let log of logData; let i = index">
+                        <td>{{ i + 1 }}</td>
+                        <td>
+                            {{log.client_id__client_name}}
+                        </td>
+    
+                        <td>
+                            {{log.client_id__client_macid}}
+                        </td>
+                        <td>
+                            {{log.client_id__client_publicip}}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <button mat-flat-button color="primary" mat-dialog-close cdkFocusInitial style="margin: auto;
               display: flex;margin-top: 1rem;">
