--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+// @import "primeicons/primeicons.css"; 
+// @import "primeng/resources/themes/luna-pink/theme.css";
+@import "primeng/resources/primeng.css"; 
 
 /* ATab header font size*/
 .mat-mdc-tab-header {
@@ -50,8 +53,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-size: 22px !important;
 }
 
+
   .mat-subtitle-2 {
     font-size: 20px !important;
+    
   }
   .hide-menu{
     height: 24px;
@@ -62,15 +67,47 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 
   .dataTables_length{
-    margin-top: 9px;
+    margin-top: 1px;
   }
   
   .dataTables_filter{
-    margin-top: 9px;
+    margin-top: 1px;
   } 
 
   
 // }
+
+
+//  common color to table
+
+.colorTable table {
+  border-collapse: collapse;
+  width: 100%;
+}
+.colorTable th, .colorTable td {
+  border: 1px solid #000;
+  padding: 8px;
+  text-align: center !important;
+}
+
+.colorTable th {
+  
+  background: linear-gradient(to bottom, #26c6da, #26c6da);
+color: white;
+text-align: center !important;
+
+}
+.colorTable tbody tr:nth-child(even) {
+}
+
+.colorTable tbody tr:nth-child(odd) {
+  background-color: #dbfaff; 
+}
+
+
+.dataTables_wrapper .dataTables_length {
+  margin-bottom: 20px !important;
+}
 
   
 // angular json style  
